# OpenGL_tutorial

./: .gitignore
_1_initial_project/: CMakeLists.txt
_1_initial_project/cmake/: 3rd_party.cmake  shaders_n_runtimelibs.cmake
_1_initial_project/tutor/: CMakeLists.txt  main.cpp
